--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -6,8 +6,7 @@
         data-repo-id="R_kgDOG9s0Ng"
         data-category="Blog"
         data-category-id="DIC_kwDOG9s0Ns4CRk25"
-        data-mapping="specific"
-        data-term="AAAA"
+        data-mapping="og:title"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="1"
